--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-fastapi
-uvicorn
+fastapi==0.109.0
+uvicorn==0.27.0
+sqlmodel==0.0.14
+boto3==1.34.0  # For S3/Blob storage integration
+python-multipart==0.0.6
 pymongo
 python-dotenv
