--- a/env.example
+++ b/env.example
@@ -1,3 +1,8 @@
+DATABASE_URL=postgresql://user:pass@localhost:5432/registry
+STORAGE_BUCKET=gitdigital-models
+AWS_ACCESS_KEY_ID=your_key
+AWS_SECRET_ACCESS_KEY=your_secret
+
 # Core system
 API_GATEWAY_URL=http://localhost:8000
 AUTH_URL=http://localhost:8001
